{
    "name": "InputsSystem",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "6a2bab78-6601-409d-8a96-e3ddfe051849",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "715762da-489b-44cc-84e5-5bd018efb1fb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "3a297c3d-3542-4ad1-bc64-bde86c6d9ae7",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "29f1f80b-b42a-4586-80d0-8db23543c1e1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b9ff1928-4917-4993-921b-21111323b555",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "79c5684e-e5ea-4e28-a139-014a9b7b0106",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "eef8b033-12f0-4322-a7f3-491d019ea07d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1952758f-23eb-42b4-bc96-fe55643cb330",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AccelerometerInput",
            "id": "eff03381-2f5c-4ceb-9b94-0ba74a1069d1",
            "actions": [
                {
                    "name": "Accelerometerss",
                    "type": "Value",
                    "id": "c77e58f7-35a0-42c8-9335-c43c83d11b42",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e259d831-8dda-4643-9e10-10a24f82edb3",
                    "path": "<Accelerometer>/acceleration",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerometerss",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}